duniverse/menhirLib.20200211/test/static/bad/choice-expression.mly
%%

let main :=
  A(B,

%token A B
